--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@ bin/
 .DS_Store
 /src/main/java/uknowlab/Main.java
 /src/main/java/uknowlab/Main.kt
+/src/main/java/uknowlab/designpattern4java/Main.java
+/src/main/java/uknowlab/designpattern4java/Main.kt
